# light-client-web

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  webclient
app/: _app.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
avail-light/: Cargo.toml
avail-light/pkg/: package.json  wasm_avail_light.d.ts  wasm_avail_light.js  wasm_avail_light_bg.wasm  wasm_avail_light_bg.wasm.d.ts
avail-light/src/: lib.rs  proof.rs  types.rs
components/: availchain.tsx  block.tsx  blockdata.tsx  cell.tsx  dsmatrix.tsx  header.tsx  logs.tsx
components/sections/: hero.tsx
components/ui/: button.tsx  progress.tsx
hooks/: use-window-size.tsx
public/static/: matrix.csv
repository/: avail-light.repository.ts
types/: light-client.ts
utils/: api.js  config.ts  helper.ts
