[package]
name = "wasm-avail-light"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
dusk-plonk = { git = "https://github.com/availproject/plonk.git", tag = "v0.12.0-polygon-2", features = [
    "alloc",
] }
dusk-bytes = { version = "0.1.6", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
once_cell = { version = "1.9.0" }
rand_chacha = { version = "0.3", default-features = false }
thiserror-no-std = "2.0.2"
wasm-bindgen = "0.2"
